@@ -6,6 +6,7 @@
         SRVDIR,
         Util,
         
+        OK              = 200,
         Extensions      = {
             '.css'      : 'text/css',
             '.js'       : 'text/javascript',
@@ -28,6 +29,7 @@
     
     /* Functions */
     exports.generateHeaders         = generateHeaders,
+    exports.sendFile                = sendFile,
     exports.require                 = mrequire,
     exports.librequire              = librequire,
     exports.srvrequire              = srvrequire,
@@ -75,7 +77,7 @@
      * second initializing after all modules load, so global var is
      * totally filled of all information that should know all modules
      */
-    global.cloudcmd.main            = exports;
+    var main = global.cloudcmd.main            = exports;
     
     /**
      * function do safe require of needed module
@@ -152,5 +154,33 @@
             
         return lRet;
 }
+        
+    /**
+     * send file to client thru pipe
+     * and gzip it if client support
+     * 
+     * @param pName - имя файла
+     * @param pGzip - данные сжаты gzip'ом
+     */
+    function sendFile(pParams){
+        var lName   = pParams.name,
+            lReq    = pParams.request,
+            lRes    = pParams.response,
+                        
+            lEnc = lReq.headers['accept-encoding'] || '',
+            lGzip = lEnc.match(/\bgzip\b/),
+            
+            lReadStream = main.fs.createReadStream(lName, {
+                'bufferSize': 4 * 1024
+            });
+            
+        lRes.writeHead(OK, generateHeaders(lName, true) );
+            
+        
+        if (lGzip)            
+            lReadStream = lReadStream.pipe( main.zlib.createGzip() );
+            
+        lReadStream.pipe(lRes);
+    }
     
 })();
